Add AWS Amazon Linux AMI Setup instructions to readme